--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iris",
   "version": "1.0.0",
   "description": "See your images through the lens of AI.",
-  "main": "index.js",
+  "main": "./client/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "ts-node": "^10.9.2",
+    "webpack": "^5.90.3"
   }
 }
