--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@babel/runtime": "^7.24.0",
+    "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
