--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "file-loader": "^6.2.0",
@@ -30,9 +31,13 @@
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.4",
     "ts-node": "^10.9.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
