--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node --watch server/server.js",
+    "start": "NODE_ENV=production nodemon server/server.js",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color\" \"nodemon ./server/server.ts\""
   },
-  "type":"module",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -29,7 +29,6 @@
     "express": "^4.18.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
-    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.4",
@@ -39,6 +38,7 @@
     "webpack-dev-server": "^5.0.2"
   },
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
