--- a/package.json
+++ b/package.json
@@ -5,40 +5,40 @@
   "main": "./client/public/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "npx webpack --config ./webpack.config.js",
     "start": "NODE_ENV=production nodemon server/server.js",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color\" \"nodemon ./server/server.ts\""
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color\" \"nodemon ./server/server.js\""
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.24.0",
     "babel": "^6.23.0",
-    "babel-loader": "^9.1.3",
+    "babel-cli": "^6.26.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "style-loader": "^3.3.4",
-    "ts-node": "^10.9.2",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.0",
-    "tailwindcss": "^3.4.1"
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
