--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "file-loader": "^6.2.0",
+    "mongodb": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
