--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/runtime": "^7.24.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
@@ -26,6 +28,7 @@
     "express": "^4.18.3",
     "file-loader": "^6.2.0",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
