--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "babel-cli": "^6.26.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-jwt": "^8.4.1",
+    "express-validator": "^7.0.1",
     "file-loader": "^6.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "react": "^18.2.0",
